# sudoku-explainer

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  test_solver.py
sudoku_explainer/: board.py  ocr.py  puzzles.py  solver.py  utils.py
sudoku_explainer/strategies/: base.py  basics.py  pairs.py  triples.py  x_wing.py
web/: app.py
web/static/: style.css
web/templates/: index.html
web/templates/partials/: board.html  controls.html  interaction_area.html  update_response.html
